--- a/GamelolCenterServer/App.config
+++ b/GamelolCenterServer/App.config
@@ -3,4 +3,11 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/>
     </startup>
+  <appSettings>
+    <!--商场、道具服务器连接信息配置-->
+    <add key="propetryServerIP" value="127.0.0.1"/>
+    <add key="propetryServerPort" value="2002"/>
+    
+    
+  </appSettings>
 </configuration>
