--- a/GamelolCenterServer/App.config
+++ b/GamelolCenterServer/App.config
@@ -4,10 +4,26 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/>
     </startup>
   <appSettings>
+    <!--中心控制服务器信息配置-->
+    <add key="centerServerPort" value="1999"/>
+    <add key ="centerServerName" value="中心控制服务器"/>
+    <add key ="centerServerId" value="1"/>
+    
+    <!--日志服务器连接信息配置-->
+    <add key="logServerIp" value="60.205.213.83"/>
+    <add key="logServerPort" value="2000" />
+
     <!--商场、道具服务器连接信息配置-->
     <add key="propetryServerIP" value="127.0.0.1"/>
     <add key="propetryServerPort" value="2002"/>
     
+    <!--社交服务器连接信息配置-->
+    <add key ="socialServerIP" value=""/>
+    <add key ="socialServerPort" value=""/>
     
+    <!--匹配服务器连接信息配置-->
+    <add key="matchServerIP" value=""/>
+    <add key="matchServerPort" value=""/>
+
   </appSettings>
 </configuration>
