Signed-off-by: taoting <578467957@qq.com>

--- a/GamelolCenterServer/GamelolCenterServer.csproj
+++ b/GamelolCenterServer/GamelolCenterServer.csproj
@@ -33,6 +33,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="LitJson">
+      <HintPath>..\..\GamelolPropertyServer\GamelolPropetryServer\LitJson.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
@@ -67,7 +70,9 @@
     <Compile Include="Util\ConfigurationSetting.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <None Include="App.config">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="GamelolCenter中心服务器指定集.xlsx" />
   </ItemGroup>
   <ItemGroup>
