--- a/GamelolCenterServer/GamelolCenterServer.csproj
+++ b/GamelolCenterServer/GamelolCenterServer.csproj
@@ -34,7 +34,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="LitJson">
-      <HintPath>..\..\GamelolPropertyServer\GamelolPropetryServer\LitJson.dll</HintPath>
+      <HintPath>.\LitJson.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
@@ -61,12 +61,16 @@
     <Compile Include="HanderInterface.cs" />
     <Compile Include="HandlerCenter.cs" />
     <Compile Include="HandlerTool\AuthenticationHandler.cs" />
+    <Compile Include="HandlerTool\MatchHandler.cs" />
     <Compile Include="HandlerTool\PropetryHandler.cs" />
+    <Compile Include="HandlerTool\SocialHandler.cs" />
     <Compile Include="LogServer\LogNetWork.cs" />
     <Compile Include="LogServer\SystemLogSystem.cs" />
+    <Compile Include="MatchServer\MatchNetWork.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PropetryServer\PropetryNetWork.cs" />
+    <Compile Include="SocialServer\SocialNetWork.cs" />
     <Compile Include="Util\ConfigurationSetting.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -88,9 +92,6 @@
       <Name>SerializableDataMessage</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="MatchServer\" />
-    <Folder Include="SocialServer\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
