Signed-off-by: taoting <578467957@qq.com>

--- a/GamelolCenterServer/App.config
+++ b/GamelolCenterServer/App.config
@@ -18,8 +18,8 @@
     <add key="propetryServerPort" value="2002"/>
     
     <!--社交服务器连接信息配置-->
-    <add key ="socialServerIP" value=""/>
-    <add key ="socialServerPort" value=""/>
+    <add key ="socialServerIP" value="192.168.3.93"/>
+    <add key ="socialServerPort" value="2003"/>
     
     <!--匹配服务器连接信息配置-->
     <add key="matchServerIP" value=""/>
